[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["msme-heww <he.wei@email.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.3.9"
torch = "^2.4.1"
opencv-python = "^4.10.0.84"
supervision = "^0.24.0"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
